# comfyui_model_installer

./: .gitignore  LICENSE  README.md  __init__.py  config.py  model_installer.py  pyproject.toml  requirements.txt  routes.py
comfyui_model_installer/: __init__.py
web/: ModelInstallerExtension.js
