[project]
name = "comfyui_model_installer"
version = "1.1.2"
description = "MUST HAVE feature for Cloud Installs. Single-Click Install Button to install Missing Model Files for Workflows. Easiest way to use ComfyUI Ever! Don't click the \"Download\" button, click the \"Install\" button instead. This easy \"Install\" button securely has the server download the missing file and install the file into the correct directory on the server. Why? You ever wanted to try out a workflow but didn't want to spend the 15 minutes to download the files and put the files where they need to be? Wait no more, use \"Model Installer\" to click the \"Install\" button."
authors = [{name = "Ryan Wyler", email = "ryan.wyler@icloud.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "huggingface_hub>=0.16.0"
]

[project.urls]
Homepage = "https://github.com/gignit/comfyui_model_installer"
Repository = "https://github.com/gignit/comfyui_model_installer"
Issues = "https://github.com/gignit/comfyui_model_installer/issues"

[tool.comfy]
PublisherId = "gignit"
NodeId = "comfyui_model_installer"
DisplayName = "Model Installer"
Icon = "https://raw.githubusercontent.com/gignit/comfyui_model_installer/main/images/icon.png"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
